syntax = "proto3";

import "google/protobuf/empty.proto";

package broadcast;

message BroadcastPlacedItemsRequest {
    string user_id = 1;     
}

message BroadcastPlacedItemsResponse {
    string message = 1;
}

service BroadcastService {
  rpc BroadcastPlacedItems(BroadcastPlacedItemsRequest) returns (BroadcastPlacedItemsResponse);
}